--- a/apartmenst.ipynb
+++ b/apartmenst.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"vacation-vibes.jpg\" alt=\"Drawing\" style=\"width: 700px;\"/>"
+    "<img src=\"https://www.libertytravel.com/sites/default/files/styles/full_size/public/all%20inclusive-hero%20%281%29.jpg?itok=JjwsPBPZ\" width=\"800\" height=\"400\"/>"
    ]
   },
   {
